--- a/section4.css
+++ b/section4.css
@@ -6,27 +6,27 @@ body{
     margin: auto;
 }
 .sec-4{
-    height: 1000px;
+    height: 900px;
     background-color: #FA9396; 
     background-image: linear-gradient(#FA9396, #F49807);
 }
 .cloud .c_1{
     position: absolute;
-    margin: -2% 2%;
+    margin: -2% -25%;
 }
 .c_1 img{
     width:550px;
 }
 .cloud .c_2{
     position: absolute;
-    margin: -2% 65%;
+    margin: -2% 90%;
 }
 .c_2 img{
     width: 800px;
 }
 .cloud .c_3{
     position: absolute;
-    margin: 20% -8%;
+    margin: 20% -22%;
     z-index: 1;
 }
 .c_3 img{
@@ -35,7 +35,7 @@ body{
 }
 .cloud .c_4{
     position: absolute;
-    margin: 30% 50%;
+    margin: 30% 65%;
 }
 .c_4 img{
 
@@ -43,7 +43,7 @@ body{
 }
 .cloud .btf{
     position: absolute;
-    margin: 30% 76%;
+    margin: 30% 80%;
 }
 .btf img{
     width: 120px;
@@ -58,4 +58,10 @@ body{
     text-align: right;
     color: #fff;
     font-weight: bold;
+}
+
+.sec-4 .cloud_cover{
+    position: absolute;
+    margin-top: 30%;
+    z-index: 2;
 }
