--- a/section5.css
+++ b/section5.css
@@ -6,8 +6,8 @@ body{
     margin: auto;
 }
 .sec-5{
-    background-image: linear-gradient(#79A3B3, #8C9592);
-    height: 1250px;
+    background-image: linear-gradient(#79A3B3, #8C9592,#1A0F2F);
+    height: 1900px;
 }
 .sec-5 .sec-5-text1{
     padding-top: 380px;
@@ -21,23 +21,88 @@ body{
 }
 .sec-5-text2 p{
     text-align: center;
-    font-size: 50px;
+    font-size: 60px;
     color: #fff;
     font-weight: bold;
     margin-top: 0;
 }
 
-.group .cloud{
+
+.group .sun{
     position: absolute;
-    margin-top: 200px;
-    
+    margin: 10% 80%;
+}
+.sun img{
+    width: 80px;
+}
+.group .sec-5-cloud{
+    position: absolute;
+    margin-top: 220px;
+}
+.sec-5-cloud img{
+    width: 100vw;
 }
 .group .jean{
     position: absolute;
-    margin: 20% 1%;
+    margin-top: 20%;
 }
+.jean img{
+    width: 100vw;
+}
+
 .group .clay{
     position: absolute;
-    margin-top: 23%;
-    width:fit-content;
+    margin-top: 19%;
+}
+.clay img{
+    width: 100vw;
+}
+.group .water{
+    position: absolute;
+    margin-top:49% ;
+}
+.water img{
+    width: 100vw;
+}
+.group .land{
+    position: absolute;
+    margin-top: 19%;
+}
+.land img{
+    width: 100vw;
+}
+.group .blender{
+    position: absolute;
+    margin: 20% 9%;
+}
+.blender img{
+    width: 388px;
+}
+.group .factory{
+    position: absolute;
+    margin: 10% 70%;
+}
+.factory img{
+    width: 577px;
+}
+.group .tree{
+    position: absolute;
+    margin-top: 13%;
+}
+.tree img{
+    width: 100vw;
+}
+.group .fish{
+    position: absolute;
+    margin: 50% 12%;
+}
+.fish img{
+    width: 332px;
+}
+.group .pipe{
+    position: absolute;
+    margin: 52% 70%;
+}
+.pipe img{
+    width: 460px;
 }
