--- a/section4.css
+++ b/section4.css
@@ -6,27 +6,28 @@ body{
     margin: auto;
 }
 .sec-4{
-    height: 900px;
+    height: 1200px;
     background-color: #FA9396; 
-    background-image: linear-gradient(#FA9396, #F49807);
+    background-image: linear-gradient(#FA9396, #F49807, #79A3B3 );
+
 }
 .cloud .c_1{
     position: absolute;
-    margin: -2% -25%;
+    margin: -2% -15%;
 }
 .c_1 img{
     width:550px;
 }
 .cloud .c_2{
     position: absolute;
-    margin: -2% 90%;
+    margin: -2% 70%;
 }
 .c_2 img{
     width: 800px;
 }
 .cloud .c_3{
     position: absolute;
-    margin: 20% -22%;
+    margin: 20% -25%;
     z-index: 1;
 }
 .c_3 img{
@@ -35,7 +36,7 @@ body{
 }
 .cloud .c_4{
     position: absolute;
-    margin: 30% 65%;
+    margin: 30% 50%;
 }
 .c_4 img{
 
@@ -62,6 +63,7 @@ body{
 
 .sec-4 .cloud_cover{
     position: absolute;
-    margin-top: 30%;
+    margin-top: 50%;
     z-index: 2;
+    transition: ease-in-out;
 }
