--- a/section5.css
+++ b/section5.css
@@ -6,26 +6,37 @@ body{
     margin: auto;
 }
 .sec-5{
-    background-image: linear-gradient(#79A3B3, #8C9592,#1A0F2F);
-    height: 1800px;
+    background-image: linear-gradient(#79A3B3, #8C9592);
+    height: 150vh;
     margin-bottom: 0;
+    padding-bottom: 0;
 }
+
+/* .sec-5 .cloud_cover2{
+    position: absolute;
+    z-index: 2;
+    transition: ease-in;
+} */
+
 .sec-5 .sec-5-text1{
-    padding-top: 260px;
+    padding-top: 170px;
 }
 .sec-5-text1 p{
     text-align: center;
     font-size: 100px;
     color: #fff;
-    font-weight: bold;
-    margin-bottom: 0;
+    font-weight:900;
+    margin: auto;
+    padding: 0;
+    line-height:80px;
 }
 .sec-5-text2 p{
     text-align: center;
     font-size: 60px;
     color: #fff;
     font-weight: bold;
-    margin-top: 0;
+    margin: auto;
+    padding: 0;
 }
 
 
@@ -39,6 +50,7 @@ body{
 .group .sec-5-cloud{
     position: absolute;
     margin-top: 220px;
+    margin-bottom: 0;
 }
 .sec-5-cloud img{
     width: 100vw;
@@ -106,4 +118,8 @@ body{
 }
 .pipe img{
     width: 460px;
+}
+
+.parallax img{
+    width: 100vw;
 }
