--- a/css/section5.css
+++ b/css/section5.css
@@ -6,19 +6,12 @@ body{
     margin: auto;
 }
 .sec-5{
-    background-image: linear-gradient(#79A3B3, #8C9592);
-    height: 150vh;
-    margin-bottom: 0;
-    padding-bottom: 0;
+    background-image: linear-gradient(#79A3B3, #8C9592,#1A0F2F);
+    height: 185vh;
+
 }
 
-/* .sec-5 .cloud_cover2{
-    position: absolute;
-    z-index: 2;
-    transition: ease-in;
-} */
-
-.sec-5 .sec-5-text1{
+.sec-5 .sec-5-text{
     padding-top: 170px;
 }
 .sec-5-text1 p{
@@ -40,86 +33,46 @@ body{
 }
 
 
-.group .sun{
+.group{
+    height: auto;
+    position: relative;
+}
+.group .parallax{
     position: absolute;
-    margin: 10% 80%;
 }
-.sun img{
-    width: 80px;
-}
-.group .sec-5-cloud{
-    position: absolute;
-    margin-top: 220px;
-    margin-bottom: 0;
-}
-.sec-5-cloud img{
-    width: 100vw;
-}
-.group .jean{
-    position: absolute;
-    margin-top: 20%;
-}
-.jean img{
-    width: 100vw;
-}
-
-.group .clay{
-    position: absolute;
-    margin-top: 19%;
-}
-.clay img{
-    width: 100vw;
-}
-.group .water{
-    position: absolute;
-    margin-top:49% ;
-}
-.water img{
-    width: 100vw;
-}
-.group .land{
-    position: absolute;
-    margin-top: 19%;
-}
-.land img{
-    width: 100vw;
-}
-.group .blender{
-    position: absolute;
-    margin: 20% 9%;
-}
-.blender img{
-    width: 388px;
-}
-.group .factory{
-    position: absolute;
-    margin: 10% 70%;
-}
-.factory img{
-    width: 577px;
-}
-.group .tree{
-    position: absolute;
-    margin-top: 13%;
-}
-.tree img{
-    width: 100vw;
-}
-.group .fish{
-    position: absolute;
-    margin: 50% 12%;
-}
-.fish img{
-    width: 332px;
-}
-.group .pipe{
-    position: absolute;
-    margin: 52% 70%;
-}
-.pipe img{
-    width: 460px;
-}
-
 .parallax img{
+
     width: 100vw;
+    height: 100%;
 }
+.container {
+    height: 5000px; /* Altezza estesa */
+    max-width: 1200px;
+    margin: 0 auto;
+    transform-origin: center center;
+    background-color: #F2F2F2;
+  }
+  
+  .box {
+    width:30px;
+    height:30px;
+    position:absolute;
+  }
+  .box0 {
+    background:blue;
+    top: 0;
+  }
+  .box1 {
+    background:red;
+    top: 150vh;
+  }
+  .box2 {
+    background:yellow;
+    top: 300vh;
+  }
+  .box3 {
+    position:fixed;
+    background:green;
+    top:50vh;
+      left:50vw;
+  }
