--- a/css/css.css
+++ b/css/css.css
@@ -9,6 +9,12 @@ body{
     overflow-x: hidden;
     width: 100%;
     margin: auto;
+    /* -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none; */
 }
 html {
     scroll-behavior: smooth;
@@ -17,8 +23,9 @@ html {
     margin: 5px;
     position: -webkit-sticky;
     position: sticky;
-    top: 0;
+    top: 5px;
     z-index: 99;
+    padding: 5px;
 }
 .nav {
     margin-left: 10%;
@@ -27,6 +34,7 @@ html {
     display: flex;
     list-style: none;
     justify-content: space-between;
+    align-items: center;
 }
 .nav a img {
     width: 100px;
@@ -59,6 +67,7 @@ html {
     overflow: hidden;
     padding-top: 60px;
     transition: 0.5s;
+    top: 0;
 }
 .slide_nav .list {
     padding: 8px 8px 8px 32px;
@@ -101,6 +110,7 @@ html {
 /* ----------------------------------------------------------------------------------- */
 @media only screen and (min-width:1366px){
 .sec-1 {
+    
     position: relative;
     background-size: contain;
     margin-bottom: 100px;
@@ -270,3 +280,28 @@ html {
     width: 100vw;
 }
 }
+
+/* progress bar */
+progress {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    -webkit-appearance: none;
+    appearance: none;
+    width: 100%;
+    height: 5px;
+    border: none;
+    background: transparent;
+    z-index: 9999;
+  }
+  progress::-webkit-progress-bar {
+    background: transparent;
+  }
+  progress::-webkit-progress-value {
+    background: linear-gradient(to left, #db38b5,#01b3e3,#25ce7b,#fdc741,#ff6b01,#fc4236);
+    background-attachment: fixed;
+  }
+  progress::-moz-progress-bar {
+    background: linear-gradient(to left, #db38b5,#01b3e3,#25ce7b,#fdc741,#ff6b01,#fc4236);
+    background-attachment: fixed;
+  }
