--- a/css/css.css
+++ b/css/css.css
@@ -19,6 +19,7 @@ body{
 html {
     scroll-behavior: smooth;
   }
+
 .navbar {
     margin: 5px;
     position: -webkit-sticky;
@@ -305,3 +306,75 @@ progress {
     background: linear-gradient(to left, #db38b5,#01b3e3,#25ce7b,#fdc741,#ff6b01,#fc4236);
     background-attachment: fixed;
   }
+
+/* loader animation*/
+
+.loader {
+    height: 6vh;
+    aspect-ratio: 4;
+    display: grid;
+    margin-right: 6vh;
+  }
+  .loader:before,
+  .loader:after {
+    content: "";
+    grid-area: 1/1;
+    --_g: no-repeat radial-gradient(farthest-side,#fff 94%,#0000);
+    background:
+      var(--_g) left,
+      var(--_g) right;
+    background-size: 25% 100%;
+    animation: l34 1s infinite; 
+    transform: translate(var(--d,0)) rotate(0);
+  }
+  .loader:after {
+    --d: 37.5%;
+    animation-delay: .5s;
+  }
+  @keyframes l34 {
+    50%,100% {transform: translate(var(--d,0)) rotate(.5turn)}
+  }
+    
+    
+
+  /* test intro */
+  .intro {
+    background: #1E1E1E;
+    /* background: linear-gradient(to bottom, #1e1e1e,#79A3B3); */
+    z-index: 999999;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+  
+  .intro .intro-text {
+    color: white;
+    font-size: 3rem;
+    text-align: center;
+    width: auto;
+    height:auto;
+  }
+  
+  .slider {
+    background: #79A3B3;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 0%;
+    -webkit-transform: translateY(100%);
+    transform: translateY(100%);
+    z-index: 999999;
+  }
+  
