--- a/css/section5.css
+++ b/css/section5.css
@@ -7,7 +7,7 @@ body{
 }
 .sec-5{
     background-image: linear-gradient(#79A3B3, #8C9592,#1A0F2F);
-    height: 185vh;
+    height: 160vh;
 
 }
 
@@ -125,4 +125,24 @@ body{
 #sec5-5{
     top: 54%;
     left: 44%;
+}
+
+.sec-5-div .sec-5-bg{
+    position: absolute;
+    margin-top: 220%;
+    z-index: 1;
+}
+
+.sec-5 .sec-5-title{
+    padding-top: 850px;
+    z-index: 2;
+    align-items: center;
+    position: relative;
+}
+.sec-5-title p{
+    text-align: center;
+    font-size: 100px;
+    color: #fff;
+    font-weight:900;
+    z-index: 2;
 }
