--- a/css/section6.css
+++ b/css/section6.css
@@ -7,12 +7,11 @@ body{
 }
 .sec-6{
     background-color: #1E1E1E;
-    height: 160vh;
+    height: 350vh;
 
 }
 .sec-6 .sec-6-title{
     padding-top: 850px;
-    z-index: 2;
     align-items: center;
     position: relative;
     z-index: 6;
@@ -99,4 +98,51 @@ body{
 
 .g05_paper img{
     width: 350px;
+}
+
+.all_woman .woman_red{
+    margin-top: -25%;
+    margin-left: 30%;
+    position: absolute;
+    z-index: 6;
+}
+.woman_red img{
+    width: 540px;
+}
+
+.all_woman .woman_original{
+    margin-top: -17%;
+    margin-left: 15%;
+    position: absolute;
+    z-index: 6;
+}
+.woman_original img{
+    width: 544px;
+}
+
+.all_woman .woman_red2{
+    margin-top: -9%;
+    margin-left: 0%;
+    position: absolute;
+    z-index: 6;
+}
+.woman_red2 img{
+    width: 544px;
+}
+
+.sec-6 .sec-6-title2{
+    margin-top: 80px;
+    margin-left: 5%;
+    position: absolute;
+    z-index: 7;
+}
+.sec-6-title2 p{
+    padding:0;
+    margin: 0;
+    line-height: 100px;
+    font-size: 100px;
+    color: #fff;
+    font-weight:900;
+    z-index: 7;
+    text-shadow: 2px 2px 4px #000000;
 }
