--- a/css/section6.css
+++ b/css/section6.css
@@ -7,8 +7,7 @@ body{
 }
 .sec-6{
     background-color: #1E1E1E;
-    height: 350vh;
-
+    height: 300vh;
 }
 .sec-6 .sec-6-title{
     padding-top: 850px;
@@ -22,7 +21,10 @@ body{
     color: #fff;
     font-weight:900;
     z-index: 6;
-    text-shadow: 2px 2px 4px #000000;
+    text-shadow: -2px 2px 0 #000,
+    2px 2px 0 #000,
+    2px -2px 0 #000,
+    -2px -2px 0 #000;
 }
 
 
@@ -144,7 +146,10 @@ body{
     color: #fff;
     font-weight:900;
     z-index: 7;
-    text-shadow: 2px 2px 4px #000000;
+    text-shadow: -2px 2px 0 #000,
+        2px 2px 0 #000,
+        2px -2px 0 #000,
+        -2px -2px 0 #000;
 }
 
 .slide .banner_slide{
@@ -181,22 +186,30 @@ body{
     left: 62%;
 }
 #sec6-2{
-    top: 50%;
+    top: 51%;
     left: 62%;
 }
 #sec6-3{
-    top: 60%;
+    top: 62%;
     left: 62%;
 }
 #sec6-4{
-    top: 70%;
+    top: 73%;
     left: 62%;
 }
 #sec6-5{
-    top: 80%;
+    top: 84%;
     left: 62%;
 }
 #sec6-6{
-    top: 90%;
+    top: 95%;
     left: 62%;
+}
+.sec-6-div .sec-6-bg{
+    position: absolute;
+    margin-top: 80%;
+    z-index: 2;
+}
+.sec-6-bg img{
+    width: full;
 }
