--- a/css/section7.css
+++ b/css/section7.css
@@ -37,6 +37,7 @@ body {
 }
 
 .right-text-1 p {
+    color: #1E1E1E;
     margin-bottom: 0;
     text-align: center;
     font-weight: 900;
@@ -63,6 +64,7 @@ body {
 }
 
 .right-text-3 p {
+    color: #1E1E1E;
     text-align: center;
     margin-top: 50px;
     font-weight: 500;
@@ -174,6 +176,7 @@ body {
     z-index: 10;
 }
 .left-text-1 p{
+    color: #1E1E1E;
     text-align: center;
     margin-top: 200px;
     font-weight: 500;
@@ -190,6 +193,7 @@ body {
     color: #CA2D2D;
 }
 .left-text-3 p{
+    color: #1E1E1E;
     text-align: center;
     margin-top: 0px;
     font-weight: 500;
